# rubicon-poc

./: .gitignore  README.md  flow-to-demo.jsonc  rubicon.jsonc
backend/: api.py  helpers.py  poc.py  pyproject.toml
bff/: api.py  get_offer.py  persistency.py  pyproject.toml  user_data.pkl
client/: package-lock.json
dap/: api.py  pyproject.toml
dap/screens/: 018ec5df-406f-7af5-a92f-011403eb0f7a.json  018ec5e7-1ee9-718b-abb7-6bf6dac44c65.json  018ec5ed-95b1-7d0f-be76-209bdfb0f121.json  018ec5f0-6923-7087-9ff5-98d8e204dc6d.json  018ec5f0-8249-7b4b-86d6-82027ad9599a.json  018ec5f9-6cfe-7503-9fa1-5960c627f050.json  018ec87e-ca4d-7357-8016-30a2a5a787ef.json  018ec887-2883-7915-8426-8c6fbf349249.json  018ec892-e87d-76fa-af4d-d7761d3bb1df.json  018ec896-a851-728f-97c9-cfa5462667a9.json  someFancyDeeplinkForTheRouter-CLABEValidation.json  someFancyDeeplinkForTheRouter-DeliveryAddress.json  someFancyDeeplinkForTheRouter-KYC-loans-L2.json
helpers/: chart.py  create_json_files.py  dummy.md  pyproject.toml
helpers/screens/: 018ec5df-406f-7af5-a92f-011403eb0f7a.json  018ec5e7-1ee9-718b-abb7-6bf6dac44c65.json  018ec5ed-7562-719b-b09a-37a143a7733b.json  018ec5ed-95b1-7d0f-be76-209bdfb0f121.json  018ec5f0-4e7f-74b4-bb28-4aae6aed4dcf.json  018ec5f0-6923-7087-9ff5-98d8e204dc6d.json  018ec5f0-8249-7b4b-86d6-82027ad9599a.json  018ec5f6-c6db-759b-a32c-d0105bcdd3b4.json  018ec5f9-6cfe-7503-9fa1-5960c627f050.json  018ec87e-ca4d-7357-8016-30a2a5a787ef.json  018ec881-423a-747b-822a-6c456302437b.json  018ec882-6207-7dc2-9dea-e1f3bef7e662.json  018ec887-2883-7915-8426-8c6fbf349249.json  (+10 more)
(+4 files in other folders)
