[tool.poetry]
name = "rubicon"
version = "0.1.0"
description = ""
authors = ["Ren Kasiyas <okasiyas@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
graphviz = "^0.20.3"
commentjson = "^0.9.0"
rule-engine = "^4.4.0"
fastapi = "^0.110.1"
uvicorn = "^0.29.0"
requests = "^2.31.0"
httpx = "^0.27.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
