[tool.poetry]
name = "helpers"
version = "0.1.0"
description = ""
authors = ["Ren Kasiyas <okasiyas@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
graphviz = "^0.20.3"
commentjson = "^0.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
